Document a feature of the m_liveDecodedResources list.

https://bugs.webkit.org/show_bug.cgi?id=30209
Reviewed by Darin Adler.

Document a feature of the m_liveDecodedResources list.
https://bugs.webkit.org/show_bug.cgi?id=30209

The code made the assumption that the list is sorted by
the m_lastDecodedAccessTime property of the CachedResource.
The above is not true when CachedResource::setDecodedSize
is called and the item is inserted the first time. In this
case the m_lastDecodedAccessTime is still zero and the
m_liveDecodedResources list becomes unsorted.

It is impossible that Cache::pruneLiveResources will
stop to process the list too early due this feature and
the alternatives of updating m_lastDecodedAccessTime in
CachedResource::setDecodedSize or changing the insert
to search the right position have a negative impact on
performance. The best solution for now is to document
this feature.

* loader/Cache.cpp:
(WebCore::Cache::pruneLiveResources):
* loader/CachedResource.cpp:
(WebCore::CachedResource::setDecodedSize):

Canonical link: https://commits.webkit.org/41655@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@50213 268f45cc-cd09-0410-ab3c-d52691b4dbfc